Fix store & update methods
